--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
   </head>
   <body>
+    <p>Note: the game will likely freeze and take ~15 seconds to fully load. (It's not frozen or broken, I swear!)</p>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 1280px; height: 720px"></div>
       <div class="footer">
